--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,31 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Navbar or Header */
+.navbar {
+  font-size: 18px;
+  text-transform: uppercase;
+  line-height: 28px;
+  box-shadow: 0 8px 10px -6px gray;
+  --webkit-box-shadow: 0 8px 10px -10px gray;
+  border-bottom: 0.3px solid gray !important;
+}
+
+.navbar-brand {
+  font-size: 20px;
+  letter-spacing: 4px;
+  font-weight: 900;
+}
+
+/* Footer */
+.footer {
+  color: white;
+  min-height: 16vh;
+  padding: 25px;
+  background: #000000;
+  background: -webkit-linear-gradient(to left, #434343, #000000);
+  background: linear-gradient(to left, #434343, #000000);
 }
